--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,46 @@
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>stirante-nexus-releases</id>
+            <url>https://nexus.stirante.com/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>stirante-nexus-snapshots</id>
+            <url>https://nexus.stirante.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <scm>
+        <connection>scm:git:git@github.com:stirante/just-pipe.git</connection>
+        <url>scm:git:git@github.com:stirante/just-pipe.git</url>
+        <developerConnection>scm:git:git@github.com:stirante/just-pipe.git</developerConnection>
+    </scm>
 
     <groupId>com.stirante</groupId>
     <artifactId>just-pipe</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
